--- a/start here/index.html
+++ b/start here/index.html
@@ -4,5 +4,12 @@
     </head>
     <body>
         <p>Hello World</p>
+        <p>This was added</p>
+
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+
+        <script>
+            alert(typeof (jQuery))
+        </script>
     </body>
 </html>
