--- a/start here/index.html
+++ b/start here/index.html
@@ -4,12 +4,14 @@
     </head>
     <body>
         <p>Hello World</p>
-        <p>This was added</p>
+        <p class="foo">This was added</p>
 
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
         <script>
-            alert(typeof (jQuery))
+            var elements = $("p.foo");
+
+            alert(elements.length);
         </script>
     </body>
 </html>
