--- a/start here/index.html
+++ b/start here/index.html
@@ -3,13 +3,16 @@
     <head>
     </head>
     <body>
-        <p>Hello World</p>
+        <p data-attr="bar">Hello World</p>
         <p class="foo">This was added</p>
 
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
         <script>
-            var elements = $("p.foo");
+            var elements = $("[data-attr='bar']"); // jQuery object
+            var elements2 = document.querySelectorAll("[data-attr='bar']");
+
+            elements.css("color", "blue");
 
             alert(elements.length);
         </script>
